Fixing Message Gap

--- a/style.css
+++ b/style.css
@@ -100,7 +100,7 @@ button{
     font-weight: 900;
     text-align:center;
     color: #000;
-    margin-top: 25vh;
+    margin-top: 18vh;
     padding: 2vw;
     text-shadow: 
       0.3vw 0.3vw 0 #00c1c1, 
